# grammar

./: .gitignore  .gitmodules  README.md  ShExDoc.g4  bnf  kitchenSink.shex  shExDoc.g4  shExDoc.jison  shex_parser_node.js  shexdoc_lexer.go
parsers/python/: .gitignore  AUTHORS  ChangeLog  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
parsers/python/pyshexc/: ShExC.py
parsers/python/pyshexc/parser/: ShExDoc.interp  ShExDoc.tokens  ShExDocLexer.interp  ShExDocLexer.py  ShExDocLexer.tokens  ShExDocParser.py  ShExDocVisitor.py
parsers/python/pyshexc/parser_impl/: generate_shexj.py  parser_context.py  shex_annotations_and_semacts_parser.py  shex_doc_parser.py  shex_node_expression_parser.py  shex_oneofshape_parser.py  shex_shape_definition_parser.py  shex_shape_expression_parser.py
parsers/python/pyshexc/shexj/: ShExJ.jsg  ShExJ.py
parsers/python/scripts/: Issue.shex  README.md  genpython.sh  shexc_to_shexj  test.json
parsers/python/tests/: README.md  __init__.py  build_test_harness.py  memlogger.py  shex.jsonld  test_basic_import.py  test_basic_parser.py  test_issue_2.py  test_issue_9.py  test_language_valueset.py  test_one_file.py  test_onshapeexpression.py  test_rdflib_parser_issue.py  test_restricts_extends.py  test_shexc.py  test_shexc_basics.py  test_shexr.py  test_single_reference.py  test_spanning_pnchars_shex.py
parsers/python/tests/data/: observation.shex
parsers/python/tests/jsonld/: shex.jsonld
parsers/python/tests/utils/: build_test_harness.py  simple_shex_test.py
(+39 files in other folders)
