[metadata]
name = PyShExC
url = https://github.com/shexSpec/grammar/parsers/python
license = Apache 2.0
author = Harold Solbrig
author_email = solbrig@jhu.edu
summary = ShExJSG - Astract Syntax Tree for the ShEx 2.0 language
python-requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Compilers
    License :: Apache 2.0
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    shex
    shexc
    shexj
    shexr
    rdf

[files]
packages =
    pyshexc

[bdist_wheel]
universal = 1
